Bootstrap fixed example: Brand aligned to left

--- a/examples/bootstrap-fixed/css/bootstrap-fixed.less
+++ b/examples/bootstrap-fixed/css/bootstrap-fixed.less
@@ -30,6 +30,8 @@ body {
 .pine li .pine-brand {
   font-size: @font-size-large;
   line-height: @line-height-computed;
+  text-align: left;
+  padding-left: 0;
 
   &:hover,
   &:focus {
